[gd_scene load_steps=8 format=3 uid="uid://b4wvx630n6vy1"]

[ext_resource type="Texture2D" uid="uid://dc5dgqhxyr46i" path="res://Backgrounds/game_background_1/game_background_1.png" id="1_ffxbx"]
[ext_resource type="FontFile" uid="uid://c7ioxelc8k4et" path="res://Fonts/NorseBold-2Kge.otf" id="2_b22sa"]
[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="2_ur0wb"]
[ext_resource type="Texture2D" uid="uid://bhhco3sko2vgv" path="res://Assets/our_assets/viking_helmet.png" id="3_mu70m"]
[ext_resource type="Texture2D" uid="uid://dypqmtjc70pdj" path="res://GUI/wooden-ui/Wooden_UI_png/title.png" id="3_xvxg3"]
[ext_resource type="Theme" uid="uid://kwwnnhbb5svp" path="res://button_theme.tres" id="6_8a313"]
[ext_resource type="PackedScene" uid="uid://bphm1nidc7yqv" path="res://Scenes/Main_Menu_Music.tscn" id="8_vi6xc"]

[node name="Background" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_ffxbx")
script = ExtResource("2_ur0wb")

[node name="VikingHelmetLogo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1001, 179)
scale = Vector2(10.7656, 9.875)
texture = ExtResource("3_mu70m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(994, 307)
scale = Vector2(1.7551, 2.46154)
texture = ExtResource("3_xvxg3")
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 31.0
offset_top = 185.0
offset_right = 31.0
offset_bottom = 336.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.233925, 0.233925, 0.233925, 1)
theme_override_fonts/font = ExtResource("2_b22sa")
theme_override_font_sizes/font_size = 150
text = "Ice Viking"
horizontal_alignment = 1
metadata/_edit_group_ = true

[node name="BackgroundMusic" parent="." instance=ExtResource("8_vi6xc")]

[node name="PlayButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 829.0
offset_top = 493.0
offset_right = 1140.0
offset_bottom = 625.0
theme = ExtResource("6_8a313")
theme_override_font_sizes/font_size = 100
text = "PLAY"

[node name="OptionsButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 118.0
offset_top = 493.0
offset_right = 429.0
offset_bottom = 625.0
theme = ExtResource("6_8a313")
theme_override_font_sizes/font_size = 100
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1541.0
offset_top = 490.0
offset_right = 1852.0
offset_bottom = 622.0
theme = ExtResource("6_8a313")
theme_override_font_sizes/font_size = 100
text = "EXIT
"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
